--- a/Resources/assets/js/modules/Ticket/templates/list-item.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/list-item.ejs
@@ -1,3 +1,4 @@
+<td class="key"><%= key %></td>
 <td class="createdAt"><%= created %></td>
 <td class="subject"><%= subject %></td>
 <td class="priority"><%= priority %></td>
