--- a/Resources/assets/js/modules/Ticket/templates/list.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/list.ejs
@@ -1,9 +1,10 @@
 <thead>
   <tr>
-    <th class="createdAt"><%= sorterState('createdAt') %> Date</th>
-    <th class="subject"><%= sorterState('subject') %> Subject</th>
-    <th class="priority"><%= sorterState('priority') %> Priority</th>
-    <th class="status"><%= sorterState('status') %> Status</th>
+    <th class="key">Key</th>
+    <th class="createdAt sortable"><%= sorterState('createdAt') %> Date</th>
+    <th class="subject sortable"><%= sorterState('subject') %> Subject</th>
+    <th class="priority sortable"><%= sorterState('priority') %> Priority</th>
+    <th class="status sortable"><%= sorterState('status') %> Status</th>
   </tr>
 </thead>
 <tbody></tbody>
