--- a/Resources/assets/less/main.less
+++ b/Resources/assets/less/main.less
@@ -32,5 +32,11 @@ body {
     }
   }
 }
+.required {
+  .control-label:after {
+    content: " *";
+    display: inline;
+  }
+}
 
 @import "modules";
