--- a/Resources/assets/less/modules/Ticket/list.less
+++ b/Resources/assets/less/modules/Ticket/list.less
@@ -7,6 +7,10 @@
     width:1%;
     white-space: nowrap;
   }
+  .key {
+    width:1%;
+    white-space: nowrap;
+  }
   .priority, .status {
     width:1%;
   }
