--- a/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -10,11 +10,11 @@
         <label class="control-label" for="last_name">Last Name</label>
         <input type="text" class="form-control input-lg" id="last_name" name="last_name" placeholder="Enter Last Name">
     </div>
-    <div class="form-group">
+    <div class="form-group required">
         <label class="control-label" for="email">Email</label>
         <input type="email" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
     </div>
-    <div class="form-group">
+    <div class="form-group required">
         <label class="control-label" for="password">Password</label>
         <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Enter Password">
     </div>
