--- a/Resources/assets/js/modules/Ticket/templates/form.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/form.ejs
@@ -1,5 +1,5 @@
 <form action="/" role="form">
-    <div class="form-group">
+    <div class="form-group required">
         <label class="control-label" for="subject">Ticket Subject</label>
         <input type="text"
                class="form-control"
@@ -8,7 +8,7 @@
                placeholder="Short summary of your ticket"
                value="<%= subject %>">
     </div>
-    <div class="form-group">
+    <div class="form-group required">
         <label class="control-label" for="description">Description</label>
         <textarea class="form-control"
                   id="description"
