DIAM-624 clickable grid items

--- a/Resources/assets/less/modules/Ticket/list.less
+++ b/Resources/assets/less/modules/Ticket/list.less
@@ -14,4 +14,11 @@
   .priority, .status {
     width:1%;
   }
+  td {
+    a {
+      padding: @table-cell-padding;
+      margin: -@table-cell-padding;
+      display: block;
+    }
+  }
 }
