--- a/Resources/assets/less/modules/Ticket/list.less
+++ b/Resources/assets/less/modules/Ticket/list.less
@@ -19,6 +19,17 @@
       padding: @table-cell-padding;
       margin: -@table-cell-padding;
       display: block;
+      color: @text-color;
+      text-decoration: none;
+    }
+  }
+  .subject {
+    a {
+      color: @link-color;
+      &:hover {
+        text-decoration: underline;
+        color: @link-hover-color;
+      }
     }
   }
 }
