DIAM-621 add actions messages

--- a/Resources/assets/less/main.less
+++ b/Resources/assets/less/main.less
@@ -12,7 +12,7 @@ body {
 }
 
 .blured {
-  #header, #content, #footer {
+  #header, .content, #footer {
     -webkit-filter: blur(2px);
     -moz-filter: blur(2px);
     -ms-filter: blur(2px);
@@ -22,7 +22,8 @@ body {
 }
 
 @import "layout/header";
-@import "layout/content";
+@import "layout/messages";
+@import "layout/main";
 @import "layout/footer";
 
 .table {
