--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -6,25 +6,20 @@
     <link rel="stylesheet" href="{{ asset('bundles/diamantefront/css/main.css') }}" type="text / css"/>
 </head>
 <body>
-<header id="header">
+<header id="header"></header>
 
-</header>
-
-<section id="content" class="container">
-
-    <div class="starter-template">
-        <h1 style="text-align: center;">Loading ...</h1>
+<section id="main" class="container">
+    <div id="messages"></div>
+    <div id="content">
+        <div class="starter-template">
+            <h1 style="text-align: center;">Loading ...</h1>
+        </div>
     </div>
-
 </section>
 
-<footer id="footer">
+<footer id="footer"></footer>
 
-</footer>
-
-<div id="dialog">
-
-</div>
+<div id="dialog"></div>
 
 <script data-main="{{ asset('bundles/diamantefront/js/main.js') }}"
         src="{{ asset('bundles/diamantefront/js/vendor/requirejs/require.js') }}"></script>
