--- a/Resources/assets/js/modules/User/templates/view.ejs
+++ b/Resources/assets/js/modules/User/templates/view.ejs
@@ -1,5 +1,5 @@
 <div class="user-meta">
-  <img src="<%=avatar_url %>?s=64&d=identicon" class="user-image img-circle" alt="<%=first_name %> <%=last_name %>" />
+  <img src="<%=avatar_url %>?s=64&d=identicon" class="user-image" alt="<%=first_name %> <%=last_name %>" />
   <strong class="user-name"><%=first_name %> <%=last_name %></strong>
 </div>
 <button class="btn btn-default btn-block js-edit-user">Edit</button>
