DIAM-370 add private label for comment

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -299,3 +299,10 @@
 .diam-branch-grid .action-cell {
     vertical-align: middle !important;
 }
+
+.diam-comment-meta span {
+    background-color: #bcbcbc;
+    padding: 1px 5px;
+    border-radius: 2px;
+    color: #fff;
+}
