DIAM-628 loaders DIAM-617 upload progress

--- a/Resources/assets/less/layout/main.less
+++ b/Resources/assets/less/layout/main.less
@@ -1,4 +1,5 @@
 #main {
+  position: relative;
   padding: (@header-height + @main-gutter) @main-gutter @main-gutter;
   background: #fff;
   min-height: 100%;
