--- a/Resources/assets/less/modules/Attachment/dropzone.less
+++ b/Resources/assets/less/modules/Attachment/dropzone.less
@@ -28,3 +28,26 @@
   opacity: 0;
   z-index: 10;
 }
+
+.dropzone-progress {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 10px;
+  height: 20px;
+}
+
+.dropzone-progress-label {
+  font-size: @font-size-small;
+  white-space: nowrap;
+  display: block;
+  text-align: center;
+  line-height: 20px;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
