--- a/Resources/assets/less/modules/Comment/main.less
+++ b/Resources/assets/less/modules/Comment/main.less
@@ -1,3 +1,9 @@
+#comments {
+  position: relative;
+  .loader {
+    position: absolute;
+  }
+}
 .comments-list {
   margin-bottom: 25px;
 }
@@ -10,6 +16,7 @@
 .comment-author-image {
   float: left;
   margin:5px 0 0 -42px;
+  width:32px;
 }
 
 .comment-date {
