--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -11,8 +11,8 @@
 <section id="main" class="container">
     <div id="messages"></div>
     <div id="content">
-        <div class="starter-template">
-            <h1 style="text-align: center;">Loading ...</h1>
+        <div class="starter-loader">
+            <div class="loader"><i class="fa fa-cog fa-spin"></i> <strong>Loading...</strong> </div>
         </div>
     </div>
 </section>
