DIAM-628 loaders, DIAM-651 fix attachments, DIAM-653 redirect to login, DIAM-649 format date for comment, DIAM-646, DIAM-641 ,DIAM-640, DIAM-639

--- a/Resources/assets/js/modules/Comment/templates/item.ejs
+++ b/Resources/assets/js/modules/Comment/templates/item.ejs
@@ -18,8 +18,8 @@
 <strong class="commment-author-name">
   Loading...
 </strong>
-<% } %> <%= content %>
-<small class="comment-date"><%= created %></small>
+<% } %> answered <%= created_relative %> <small class="comment-date">(<%= created_at %>)</small>
+<div class="comment-content"><%= content %></div>
 <% if(attachments && attachments.length) { %>
 <div class="comment-attachments-block">
   <strong>File attachments:</strong>
