--- a/Resources/assets/js/modules/Session/templates/login.ejs
+++ b/Resources/assets/js/modules/Session/templates/login.ejs
@@ -16,6 +16,6 @@
             <input name="remember" id="remember" type="checkbox"> Remember me
         </label>
     </div>
-    <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Submit</button>
+    <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Sign In</button>
     <p>Don't have account? &mdash; <a href="#registration">Registration</a></p>
 </form>
