--- a/Resources/assets/js/modules/Session/templates/reset.ejs
+++ b/Resources/assets/js/modules/Session/templates/reset.ejs
@@ -16,6 +16,7 @@
     <label class="control-label" for="email">Email</label>
     <input type="text" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
   </div>
+  <p>Back to <a href="#login">Sign in</a></p>
   <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Reset Password</button>
 </form>
 <% } %>
