--- a/Resources/assets/js/modules/User/templates/user.ejs
+++ b/Resources/assets/js/modules/User/templates/user.ejs
@@ -1,6 +1,4 @@
 <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">
   <%= first_name %> <%= last_name %><span class="caret"></span>
 </button>
-<div class="dropdown-menu dropdown-menu-right" id="dropdown-profile">
-  loading...
-</div>
+<div class="dropdown-menu dropdown-menu-right" id="dropdown-profile"></div>
