--- a/Resources/assets/less/modules/Comment/main.less
+++ b/Resources/assets/less/modules/Comment/main.less
@@ -20,8 +20,11 @@
 }
 
 .comment-date {
-  display: block;
-  margin: 5px 0;
+  font-size: inherit;
+  color: @text-muted;
+}
+.comment-content {
+  margin: 0 0 .5em;
 }
 
 .comment-tools {
