--- a/Resources/assets/js/modules/Footer/templates/footer.ejs
+++ b/Resources/assets/js/modules/Footer/templates/footer.ejs
@@ -4,6 +4,6 @@
     by <a href="http://eltrino.com">Eltrino LLC</a>
   </div>
   <div class="col-xs-6 text-right text-muted small">
-    Revision <span class="revision">revision</span>
+    Revision <span class="revision">{{revision}}</span>
   </div>
 </div>
