--- a/Resources/assets/less/modules/Ticket/view.less
+++ b/Resources/assets/less/modules/Ticket/view.less
@@ -4,6 +4,7 @@
   padding-bottom: @padding-base-vertical;
   border: 1px solid #ccc;
   border-radius: @border-radius-base;
+  text-transform: capitalize;
   .row {
     text-align: center;
     font-size: @font-size-base;
