DIAM-655 empty view for grid

--- a/Resources/assets/less/modules/Ticket/list.less
+++ b/Resources/assets/less/modules/Ticket/list.less
@@ -33,7 +33,10 @@
       }
     }
   }
-  .alert {
-    margin: @grid-gutter-width/2;
+  .message {
+    text-align: center;
+    td {
+      padding: @table-cell-padding * 2;
+    }
   }
 }
