--- a/Resources/assets/js/modules/Ticket/templates/empty-list.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/empty-list.ejs
@@ -1,1 +1,1 @@
-<div class="alert alert-danger" role="alert">There are no tickets yet, create the first one</div>
+<td colspan="5">There are no tickets yet, create the first one</td>
