--- a/Resources/assets/js/modules/Ticket/templates/empty-search.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/empty-search.ejs
@@ -1,1 +1,1 @@
-<div class="alert alert-danger" role="alert">There are no tickets matching your criteria.</div>
+<td colspan="5">There are no tickets matching your criteria.</td>
