DIAM-661: Refactoring and Code inspection clean-up

--- a/Resources/views/Branch/create.html.twig
+++ b/Resources/views/Branch/create.html.twig
@@ -33,7 +33,7 @@
     ) %}
 
     {% set dataBlocks = dataBlocks|merge([{
-    'title': 'Email Configuration'|trans,
+    'title': 'diamante.desk.email.configuration'|trans,
     'subblocks': [
     {
     'title':null,
