--- a/Resources/views/Branch/update.html.twig
+++ b/Resources/views/Branch/update.html.twig
@@ -70,7 +70,7 @@
     ) %}
 
     {% set dataBlocks = dataBlocks|merge([{
-    'title': 'Email Configuration'|trans,
+    'title': 'diamante.desk.email.configuration'|trans,
     'subblocks': [
     {
     'title':null,
