DIAM-629 password strength

--- a/Resources/assets/js/modules/Session/templates/reset.ejs
+++ b/Resources/assets/js/modules/Session/templates/reset.ejs
@@ -8,6 +8,7 @@
     <label class="control-label" for="password">New Password</label>
     <input type="text" class="form-control input-lg" id="password" name="password" placeholder="Enter New Password">
   </div>
+  <p>Back to <a href="#login">Sign in</a></p>
   <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Create New Password</button>
 </form>
 <% } else { %>
