--- a/Resources/views/ResetPassword/email/reset.html.twig
+++ b/Resources/views/ResetPassword/email/reset.html.twig
@@ -1,3 +1,3 @@
 We were told that you forgot your password. To restore your password click on link below
 
-{{ url('diamante_front') }}#newpassword/{{ activation_hash }}
+{{ url('diamante_front') }}/#newpassword/{{ activation_hash }}
