--- a/Resources/views/Registration/email/confirmation.txt.twig
+++ b/Resources/views/Registration/email/confirmation.txt.twig
@@ -1,4 +1,4 @@
 Thank you.
 
 Please click the link below  to confirm your email:
-{{ url('diamante_front') }}#confirm/{{ hash }}
+{{ url('diamante_front') }}/#confirm/{{ hash }}
