--- a/Resources/assets/less/modules/User/main.less
+++ b/Resources/assets/less/modules/User/main.less
@@ -35,6 +35,7 @@
 .dropdown-menu {
   .loader {
     position: absolute;
+    font-size: 1em;
     &:only-child {
       position: relative;
       > div {
