--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -11,9 +11,7 @@
 <section id="main" class="container">
     <div id="messages"></div>
     <div id="content">
-        <div class="starter-loader">
-            <div class="loader"><i class="fa fa-cog fa-spin"></i> <strong>Loading...</strong> </div>
-        </div>
+        <div class="loader"><div><i class="fa fa-cog fa-spin"></i> <strong>Loading...</strong></div></div>
     </div>
 </section>
 
