--- a/Resources/assets/js/modules/Ticket/templates/empty-view.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/empty-view.ejs
@@ -1,1 +1,1 @@
-<div class="alert alert-danger" role="alert">This Ticket doesn't exist!</div>
+<div class="alert alert-danger" role="alert">This ticket doesn't exist!</div>
