--- a/Resources/assets/less/modules/Ticket/view.less
+++ b/Resources/assets/less/modules/Ticket/view.less
@@ -1,3 +1,9 @@
+.ticket-view {
+  h2 {
+    text-transform: uppercase;
+    font-size: @font-size-h4;
+  }
+}
 .ticket-meta {
   overflow: hidden;
   padding-top: @padding-base-vertical;
