--- a/Resources/assets/less/modules/Ticket/list.less
+++ b/Resources/assets/less/modules/Ticket/list.less
@@ -25,7 +25,8 @@
       text-decoration: none;
     }
   }
-  .subject {
+  .subject,
+  .message {
     a {
       color: @link-color;
       &:hover {
@@ -38,6 +39,9 @@
     text-align: center;
     td {
       padding: @table-cell-padding * 2;
+    }
+    a {
+      display: inline;
     }
   }
 }
