--- a/Resources/assets/js/modules/Session/templates/reset.ejs
+++ b/Resources/assets/js/modules/Session/templates/reset.ejs
@@ -6,7 +6,7 @@
   <input name="hash" type="hidden" value="<%= hash %>"/>
   <div class="form-group">
     <label class="control-label" for="password">New Password</label>
-    <input type="text" class="form-control input-lg" id="password" name="password" placeholder="Enter New Password">
+    <input type="password" class="form-control input-lg" id="password" name="password" placeholder="Enter New Password">
   </div>
   <p>Back to <a href="#login">Sign in</a></p>
   <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Create New Password</button>
