--- a/Resources/assets/less/modules/Session/main.less
+++ b/Resources/assets/less/modules/Session/main.less
@@ -23,6 +23,11 @@
     position: relative;
     z-index: 1;
   }
+  .messages {
+    .alert {
+      margin-top: 20px;
+    }
+  }
 }
 
 .auth-block {
