--- a/Resources/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/view.ejs
@@ -1,7 +1,6 @@
 <p>
-    <a class="btn btn-link js-back" href="#tickets">
-        <span class="fa fa-chevron-left"></span>
-        Back
+    <a class="btn btn-link js-back" href="<%= back_url %>">
+        <i class="fa fa-chevron-left"></i>Back
     </a>
 </p>
 <h1><%= subject %></h1>
