--- a/Resources/assets/less/shared.less
+++ b/Resources/assets/less/shared.less
@@ -12,7 +12,7 @@
 }
 
 .blured {
-  #header, #content, #footer {
+  .wrap {
     -webkit-filter: blur(2px);
     -moz-filter: blur(2px);
     -ms-filter: blur(2px);
@@ -85,5 +85,12 @@
     -ms-filter: blur(2px);
     -o-filter: blur(2px);
     filter: blur(2px);
+    .blured & {
+      -webkit-filter: none;
+      -moz-filter: none;
+      -ms-filter: none;
+      -o-filter: none;
+      filter: none;
+    }
   }
 }
