--- a/Resources/assets/less/layout/footer.less
+++ b/Resources/assets/less/layout/footer.less
@@ -1,5 +1,8 @@
 #footer {
   .container {
+    position: relative;
+    min-height: @footer-height;
+    margin-top: -@footer-height;
     background: #f5f5f5;
     padding: @main-gutter/2 @main-gutter;
   }
