--- a/Resources/assets/less/layout/main.less
+++ b/Resources/assets/less/layout/main.less
@@ -3,7 +3,7 @@
 }
 #main {
   position: relative;
-  padding: (@header-height + @main-gutter) @main-gutter @main-gutter;
+  padding: (@header-height + @main-gutter) @main-gutter (@main-gutter + @footer-height);
   background: #fff;
   min-height: 100%;
 }
