--- a/Resources/assets/less/modules/Comment/main.less
+++ b/Resources/assets/less/modules/Comment/main.less
@@ -1,9 +1,3 @@
-#comments {
-  position: relative;
-  .loader {
-    position: absolute;
-  }
-}
 .comments-list {
   margin-bottom: 25px;
 }
@@ -43,15 +37,5 @@
     }
   }
 }
-.comments-form {
-  textarea {
-    resize: vertical;
-  }
-  .dropzone {
-    margin-bottom: 15px;
-    @media (min-width: @screen-md-min) {
-      width: percentage((6 / @grid-columns));
-    }
-  }
-}
+@import "form";
 @import "attachments";
