DIAM-645 show email if cutomers first and last names are not specified

--- a/Resources/assets/js/modules/User/templates/user.ejs
+++ b/Resources/assets/js/modules/User/templates/user.ejs
@@ -1,4 +1,4 @@
 <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">
-  <%= first_name %> <%= last_name %><span class="caret"></span>
+  <%= fullName %><span class="caret"></span>
 </button>
 <div class="dropdown-menu dropdown-menu-right" id="dropdown-profile"></div>
