--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Diamante</title>
+    {% if app.environment == 'dev' %}
     <link rel="stylesheet" href="{{ asset('bundles/diamantefront/css/main.css') }}" type="text/css"/>
+    {% else %}
+    <link rel="stylesheet" href="{{ asset('bundles/diamantefront/css/main.min.css') }}" type="text/css"/>
+    {% endif %}
 </head>
 <body>
 <div class="wrap">
@@ -18,10 +22,16 @@
 </div>
 <div id="dialog"></div>
 
-<script data-main="{{ asset('bundles/diamantefront/js/main.js') }}"
-        src="{{ asset('bundles/diamantefront/js/vendor/requirejs/require.js') }}"></script>
+{% if app.environment == 'dev' %}
+    <script data-main="{{ asset('bundles/diamantefront/js/main.js') }}"
+            src="{{ asset('bundles/diamantefront/js/vendor/requirejs/require.js') }}"></script>
+{% else %}
+    <script src="{{ asset('bundles/diamantefront/js/vendor/requirejs/require.js') }}"></script>
+    <script src="{{ asset('bundles/diamantefront/js/main.built.js') }}"></script>
+{% endif %}
 <script>
     require.config({
+        baseUrl: '{{ asset('bundles/diamantefront/js/') }}',
         config : {
             'config' : {
                 env : '{{ app.environment }}',
