--- a/Resources/assets/js/modules/Ticket/templates/list-item.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/list-item.ejs
@@ -1,5 +1,5 @@
-<td class="key"><a href="#tickets/<%= id %>"><%= key %></a></td>
-<td class="createdAt"><a href="#tickets/<%= id %>"><%= created %></a></td>
-<td class="subject"><a href="#tickets/<%= id %>"><%= subject %></a></td>
-<td class="priority"><a href="#tickets/<%= id %>"><%= priority %></a></td>
-<td class="status"><a href="#tickets/<%= id %>"><%= status %></a></td>
+<td class="key"><a href="#tickets/<%= key %>"><%= key %></a></td>
+<td class="createdAt"><a href="#tickets/<%= key %>"><%= created %></a></td>
+<td class="subject"><a href="#tickets/<%= key %>"><%= subject %></a></td>
+<td class="priority"><a href="#tickets/<%= key %>"><%= priority %></a></td>
+<td class="status"><a href="#tickets/<%= key %>"><%= status %></a></td>
