DIAM-701: Fixed the newline and paragraphs issue

--- a/Resources/views/Ticket/notification/notification.html.twig
+++ b/Resources/views/Ticket/notification/notification.html.twig
@@ -9,7 +9,7 @@
         {% for key, value in changes %}
         <ul>
             <li>
-                <b>{{ key }}: </b>{{ value }}
+                <b>{{ key }}: </b>{{ value|nl2br }}
             </li>
         </ul>
         {% endfor %}
