DIAM-704 add sorting by key

--- a/Resources/assets/js/modules/Ticket/templates/list.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/list.ejs
@@ -1,6 +1,6 @@
 <thead>
   <tr>
-    <th class="key">Key</th>
+    <th class="key sortable"><%= sorterState('key') %> Key</th>
     <th class="createdAt sortable"><%= sorterState('createdAt') %> Date</th>
     <th class="subject sortable"><%= sorterState('subject') %> Subject</th>
     <th class="priority sortable"><%= sorterState('priority') %> Priority</th>
