--- a/Resources/assets/js/modules/Comment/templates/item.ejs
+++ b/Resources/assets/js/modules/Comment/templates/item.ejs
@@ -16,7 +16,15 @@
   <strong>File attachments:</strong>
   <ul class="comment-attachments">
     <% _.each(attachments, function(attachment){ %>
-    <li><a href="<%= attach_link(attachment.hash) %>" title="Download: <%= attachment.filename %>"><%= attachment.filename %></a></li>
+      <li>
+        <a href="<%= attachment.file.url %>" title="Download: <%= attachment.file.filename %>">
+          <% if(attachment.thumbnails) { %>
+            <img src="<%= attachment.thumbnails.url %>" title="Preview of attachment.file.filename">
+            <br>
+          <% } %>
+          <%= attachment.file.filename %>
+        </a>
+      </li>
     <% }); %>
   </ul>
 </div>
