DIAM-764 Notification email about the new comment is displayed in source code.

--- a/Resources/views/Ticket/notification/notification.html.twig
+++ b/Resources/views/Ticket/notification/notification.html.twig
@@ -28,7 +28,7 @@
                             {% for key, value in changes %}
                                 <tr>
                                     <td style="color: #A09F9F; font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; white-space: nowrap; vertical-align: top;" valign="top">{{ key }}</td>
-                                    <td style="font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; vertical-align: top;" valign="top">{{ value|nl2br }}</td>
+                                    <td style="font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; vertical-align: top;" valign="top">{{ value|raw }}</td>
                                 </tr>
                             {% endfor %}
                         </table>
