--- a/Resources/assets/js/modules/Attachment/templates/item.ejs
+++ b/Resources/assets/js/modules/Attachment/templates/item.ejs
@@ -2,5 +2,5 @@
     <li><button class="btn btn-link js-delete-attachment" title="Delete Comment"><i class="fa
     fa-times"></i></button></li>
 </ul>
-<a href="<%= link %>" title="Download: <%= filename %>"><%= filename %></a>
+<a href="<%= file.url %>" title="Download: <%= file.filename %>"><%= file.filename %></a>
 
