--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -287,6 +287,13 @@
         }) }}
     {% endset %}
 
+    {% set WatchersListWidget %}
+        {{ oro_widget_render({
+            'widgetType': 'block',
+            'url': path('diamante_ticket_watchers', {ticketId: entity.id})
+        }) }}
+    {% endset %}
+
     {% set dataBlocks =
     [
     {
@@ -296,7 +303,10 @@
     {
     'title': 'diamante.desk.ticket.details'|trans,
     'data' : dataSubBlocks
-    }
+    },
+    {
+    'title': 'diamante.desk.common.watchers'|trans,
+    'data' : [WatchersListWidget]}
     ]
     }
     ]
