--- a/Resources/assets/less/layout/messages.less
+++ b/Resources/assets/less/layout/messages.less
@@ -4,3 +4,12 @@
     margin-bottom: 5px;
   }
 }
+
+.fixed-messages {
+  top: @header-height + @main-gutter;
+  position: fixed;
+  z-index: 10;
+  .alert{
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  }
+}
