DIAM-683 fixing ticket attachments;

--- a/Resources/assets/js/modules/Attachment/templates/item.ejs
+++ b/Resources/assets/js/modules/Attachment/templates/item.ejs
@@ -2,5 +2,7 @@
     <li><button class="btn btn-link js-delete-attachment" title="Delete Comment"><i class="fa
     fa-times"></i></button></li>
 </ul>
+<% if (typeof(thumbnails) !== 'undefined') { %>
+    <img src="<%= thumbnails.url %>" alt="<%= file.filename %>"><br>
+<% } %>
 <a href="<%= file.url %>" title="Download: <%= file.filename %>"><%= file.filename %></a>
-
