DIAM-746 add user chooser

--- a/Resources/views/Ticket/widget/add_watcher.html.twig
+++ b/Resources/views/Ticket/widget/add_watcher.html.twig
@@ -1,3 +1,7 @@
+{% if form is defined %}
+{% form_theme form 'DiamanteDeskBundle:Ticket/widget:genemu_jqueryselect2_javascript.html.twig' %}
+{% endif %}
+
 <div class="widget-content form-horizontal box-content row-fluid">
     {% if reload_page is defined and reload_page %}
         <script type="text/javascript">
