DIAM-771 add wysiwyg editor

--- a/Resources/assets/less/modules/Comment/form.less
+++ b/Resources/assets/less/modules/Comment/form.less
@@ -8,6 +8,9 @@
   textarea {
     resize: vertical;
   }
+  iframe {
+    width:99.9% !important;
+  }
   .dropzone {
     margin-bottom: 15px;
     @media (min-width: @screen-md-min) {
