DIAM-752 add watcher list

--- a/Resources/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/view.ejs
@@ -40,13 +40,9 @@
             <div class="block" id="attachments">
                 Loading ...
             </div>
-            <!--div class="block">
-                <h2>People</h2>
-                <ul class="list-unstyled">
-                    <li><a href="#">Tony Anderson</a></li>
-                </ul>
-                <button type="button" class="btn btn-primary btn-sm">Add Collaborator</button>
-            </div-->
+            <div class="block" id="watchers">
+                Loading ...
+            </div>
         </div>
         <!--div class="group">
             <div class="block">
