DIAM-752 add and remove watcher functionality

--- a/Resources/assets/js/modules/Comment/templates/item.ejs
+++ b/Resources/assets/js/modules/Comment/templates/item.ejs
@@ -19,7 +19,7 @@
       <li>
         <a href="<%= attachment.file.url %>" title="Download: <%= attachment.file.filename %>">
           <% if(attachment.thumbnails) { %>
-            <img src="<%= attachment.thumbnails.url %>" title="Preview of attachment.file.filename">
+            <img src="<%= attachment.thumbnails.url %>" title="Preview of <%= attachment.file.filename %>">
             <br>
           <% } %>
           <%= attachment.file.filename %>
