--- a/Resources/assets/js/modules/Watcher/templates/item.ejs
+++ b/Resources/assets/js/modules/Watcher/templates/item.ejs
@@ -1,1 +1,1 @@
-<a href="mailto:<%= email %>"><%= username %></a>
+<a href="mailto:<%= email %>"><%= username %></a><button class="btn btn-link js-watcher-delete" title="Remove Watcher"><i class="fa fa-times"></i></button>
