--- a/Resources/assets/less/modules.less
+++ b/Resources/assets/less/modules.less
@@ -3,3 +3,4 @@
 @import "modules/Session/main";
 @import "modules/Comment/main";
 @import "modules/Attachment/main";
+@import "modules/Watcher/main";
