--- a/Resources/assets/js/modules/Watcher/templates/layout.ejs
+++ b/Resources/assets/js/modules/Watcher/templates/layout.ejs
@@ -2,4 +2,4 @@
 <div id="watchers-list">
 
 </div>
-<!--button type="button" class="btn btn-primary btn-sm">Add Watcher</button-->
+<button type="button" class="btn btn-primary btn-sm js-add-watcher">Add Watcher</button>
