--- a/Resources/views/Ticket/widget/watchers.html.twig
+++ b/Resources/views/Ticket/widget/watchers.html.twig
@@ -4,17 +4,7 @@
     <ul class="unstyled clearfix">
         {% for watcher in watchers %}
             <li class="diam-attachment">
-                {% set oroUser = fetch_oro_user(watcher) %}
-                {% set diamanteUser = fetch_diamante_user(watcher) %}
-                {% if oroUser %}
-                    {{ oroUser|oro_format_name }}
-                {% elseif diamanteUser %}
-                    {% if diamanteUser.firstName is null and diamanteUser.lastName is null %}
-                        {{ diamanteUser.email }}
-                    {% else %}
-                        {{ diamanteUser.firstName ~ ' ' ~ diamanteUser.lastName }}
-                    {% endif %}
-                {% endif %}
+                {{ render_user_name(watcher) }}
             </li>
         {% endfor %}
     </ul>
